# scgi-cgi

./: .gitignore  CMakeLists.txt  Makefile.am  README.rst  configure.ac  scgi-cgi.1  scgi-cgi.c
cmake/: AddTargetProperties.cmake
